force-app/main/default/objects/Account/fields/AcitivityNumber__c.field-meta.xml
<CustomField>
    <fullName>AcitivityNumber__c</fullName>
    <label>活動件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>