force-app/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>承認状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請前</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認</fullName>
                <default>true</default>
                <label>承認</label>
            </value>
            <value>
                <fullName>却下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>