force-app/main/default/objects/Account/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>承認者</relationshipLabel>
    <relationshipName>Approver</relationshipName>
    <type>Lookup</type>
</CustomField>