force-app/main/default/objects/Account/fields/CaseSummary__c.field-meta.xml
<CustomField>
    <fullName>CaseSummary__c</fullName>
    <label>ケースの要約</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>