force-app/main/default/objects/Account/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <label>契約状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未契約</fullName>
                <default>true</default>
                <label>未契約</label>
            </value>
            <value>
                <fullName>契約中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>