force-app/main/default/objects/Account/fields/Credit_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Result__c</fullName>
    <label>与信チェック結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>承認</fullName>
            </value>
            <value>
                <fullName>条件付き承認</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>否認</fullName>
            </value>
            <value>
                <fullName>審査中</fullName>
            </value>
            <value>
                <fullName>期限切れ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>