force-app/main/default/objects/Account/fields/Credit_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Date__c</fullName>
    <label>信用調査日</label>
    <type>Date</type>
</CustomField>